--- a/index.html
+++ b/index.html
@@ -3,9 +3,130 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Hello World</title>
+        <link
+            rel="stylesheet"
+            href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+            integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+            crossorigin="anonymous"
+        />
+        <style>
+            table {
+                letter-spacing: 1px;
+            }
+        </style>
+        <title>Git Commands</title>
     </head>
     <body>
-        <h1>Hello World</h1>
+        <h1>Git Commands (Basics)</h1>
+
+        <table class="table table-bordered">
+            <thead>
+                <tr>
+                    <th scope="col">Relate To</th>
+                    <th scope="col">Description</th>
+                    <th scope="col">Git Command</th>
+                </tr>
+            </thead>
+            <tbody>
+                <!-- Directories -->
+                <tr>
+                    <td>Directories / Move Around Folders</td>
+                    <td>Print Current Directory</td>
+                    <td>pwd + 'Enter' key</td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td>Change Directory</td>
+                    <td>
+                        cd + "Drag the target folder into Terminal on the
+                        cursor"
+                    </td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td>Change Directory to parent folder</td>
+                    <td>
+                        cd ..
+                    </td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td>Make Directory / New Folder</td>
+                    <td>mkdir "folderName"</td>
+                </tr>
+
+                <!-- Set Up Your Details -->
+                <tr>
+                    <td>Setup Your Details</td>
+                    <td>Set up your name globally</td>
+                    <td>git config --global user.name "YourName"</td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td>Set up your email globally</td>
+                    <td>
+                        git config --global user.email "yourEmail@gmail.com"
+                    </td>
+                </tr>
+
+                <!-- Git -->
+                <tr>
+                    <td>Git</td>
+                    <td>Current commit status</td>
+                    <td>git status</td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td>Initialize git</td>
+                    <td>git init</td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td>Revert to previous version / Undo</td>
+                    <td>
+                        git checkout -- .
+                    </td>
+                </tr>
+
+                <!-- Files -->
+                <tr>
+                    <td>Files</td>
+                    <td>Create a new file</td>
+                    <td>touch "index.html"</td>
+                </tr>
+
+                <!-- Staging -->
+                <tr>
+                    <td>Staging</td>
+                    <td>Add to Stage</td>
+                    <td>git add "index.html"</td>
+                </tr>
+
+                <!-- Commit -->
+                <tr>
+                    <td>Commit</td>
+                    <td>Make a commit / Save changes</td>
+                    <td>
+                        git commit -m 'Add your description of changes here.'
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+
+        <script
+            src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+            integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+            crossorigin="anonymous"
+        ></script>
+        <script
+            src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+            integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+            crossorigin="anonymous"
+        ></script>
+        <script
+            src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+            integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+            crossorigin="anonymous"
+        ></script>
     </body>
 </html>
