Update Push heading

--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
         <div class="container">
             <h1 class="py-5">Git Commands (Basics)</h1>
 
-            <h3>Push</h3>
+            <h3>
+                Push <small><em>( to Existing Repo )</em></small>
+            </h3>
             <ol>
                 <li>In Terminal, check git status.</li>
                 <li>Add to Staging Level.</li>
